# images2slides

./: .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  check_infrastructure.py  docker-compose.yml  evaluation.py  pyproject.toml
.openhands/skills/: repo.md
cli/: __init__.py  __main__.py
docs/: api-reference.md  architecture.md  configuration.md  development.md
evaluation/: README.md
images2slides/: __init__.py  auth.py  build_slide.py  geometry.py  models.py  postprocess.py  slides_api.py  uploader.py  validator.py
images2slides/vlm/: __init__.py  extract.py  prompt.py
saas/: .gitignore  README.md
saas/api/: Dockerfile  auth.py  database.py  main.py  models.py  oauth_manager.py  requirements.txt  routes.py  schemas.py  token_encryption.py
saas/api/migrations/: env.py
saas/api/migrations/versions/: 001_initial_schema.py
saas/api/routers/: auth.py  health.py  jobs.py  projects.py
saas/backend/: Dockerfile  __init__.py  alembic.ini  config.py  main.py  schemas.py
saas/backend/db/: __init__.py  models.py  session.py
saas/backend/migrations/: alembic.ini  env.py
saas/backend/migrations/versions/: 0001_initial.py  001_initial.py
saas/backend/routers/: artifacts.py  auth.py  files.py  health.py  jobs.py  me.py  oauth.py  projects.py  uploads.py
saas/backend/services/: auth.py  conversion_engine.py  crypto.py  encryption.py  google_oauth.py  upload_signing.py
saas/backend/storage/: __init__.py  base.py  local.py
saas/docs/: IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  SAAS_README.md  repo.md
saas/web/: Dockerfile  middleware.ts  tailwind.config.js
saas/web/app/: globals.css  layout.tsx  page.tsx
saas/web/app/(dashboard)/: layout.tsx
saas/web/types/: next-auth.d.ts
saas/worker/: Dockerfile  __init__.py  conversion_engine.py  main.py  pipeline.py  requirements.txt  runner.py  steps.py  worker.py
tests/: __init__.py  conftest.py  test_build_slide.py  test_geometry.py  test_models.py  test_postprocess.py  test_slides_api.py  test_uploader.py  test_validator.py  test_vlm.py
tests/fixtures/: sample_layout.json
(+9 files in other folders)
